Cparameters: default_vals, not defaultvals

--- a/Tutorial-VacuumMaxwell_InitialData.ipynb
+++ b/Tutorial-VacuumMaxwell_InitialData.ipynb
@@ -142,11 +142,11 @@
     "\n",
     "# Step 1: Declare free parameters intrinsic to these initial data\n",
     "# Amplitude\n",
-    "amp = par.Cparameters(\"REAL\",__name__,\"amp\", defaultvals=1.0)\n",
+    "amp = par.Cparameters(\"REAL\",__name__,\"amp\", default_vals=1.0)\n",
     "# lambda\n",
-    "lam = par.Cparameters(\"REAL\",__name__,\"lam\", defaultvals=1.0)\n",
-    "time = par.Cparameters(\"REAL\",__name__,\"time\", defaultvals=0.0)\n",
-    "wavespeed = par.Cparameters(\"REAL\",__name__,\"wavespeed\", defaultvals=1.0)\n",
+    "lam = par.Cparameters(\"REAL\",__name__,\"lam\", default_vals=1.0)\n",
+    "time = par.Cparameters(\"REAL\",__name__,\"time\", default_vals=0.0)\n",
+    "wavespeed = par.Cparameters(\"REAL\",__name__,\"wavespeed\", default_vals=1.0)\n",
     "\n",
     "psi_ID = sp.sympify(0)\n",
     "\n",
