GiRaFFE, Weyl Scalars: Some minor edits for the dissertation.

--- a/Tutorial-WeylScalarsInvariants-Cartesian.ipynb
+++ b/Tutorial-WeylScalarsInvariants-Cartesian.ipynb
@@ -426,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also need the extrinsic curvature tensor $K_{ij}$; in the Cartesian case, we simply declared $K_{ij}$ above. We will need the trace, which can be computed as usual: $K = \\gamma^{ij} K_{ij}$."
+    "We will need the trace of the extrinsic curvature tensor $K_{ij}$, which can be computed as usual: $K = \\gamma^{ij} K_{ij}$."
    ]
   },
   {
@@ -443,7 +443,7 @@
    "outputs": [],
    "source": [
     "# Step 6.b: We also need the extrinsic curvature tensor $K_{ij}$. This can be built from quantities from BSSN_RHSs\n",
-    "#           For Cartesian coordinates, we assume this is a gridfunction.\n",
+    "#           For now, we assume this is a gridfunction (We assume the ADM formalism for now).\n",
     "#extrinsicKDD = ixp.zerorank2()\n",
     "#for i in range(3):\n",
     "#    for j in range(3):\n",
