GiRaFFE: Fixing LGTM issues and restoring the unstaggered source terms to pre-workaround functionality.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -295,8 +295,7 @@
    "outputs": [],
    "source": [
     "def generate_C_code_for_Stilde_flux(out_dir,inputs_provided = False, alpha_face=None, gamma_faceDD=None, beta_faceU=None,\n",
-    "                                    Valenciav_rU=None, B_rU=None, Valenciav_lU=None, B_lU=None,\n",
-    "                                    Stilde_flux_HLLED = None, sqrt4pi=None,\n",
+    "                                    Valenciav_rU=None, B_rU=None, Valenciav_lU=None, B_lU=None, sqrt4pi=None,\n",
     "                                    outCparams = \"outCverbose=False,CSE_sorting=none\", write_cmax_cmin=False):\n",
     "    if not inputs_provided:\n",
     "        # We will pass values of the gridfunction on the cell faces into the function. This requires us\n",
@@ -314,7 +313,7 @@
     "        sqrt4pi = par.Cparameters(\"REAL\",thismodule,\"sqrt4pi\",\"sqrt(4.0*M_PI)\")\n",
     "\n",
     "        # We'll also need to store the results of the HLLE step between functions.\n",
-    "        Stilde_flux_HLLED = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Stilde_flux_HLLED\")\n",
+    "        ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Stilde_flux_HLLED\")\n",
     "\n",
     "    if write_cmax_cmin:\n",
     "        # In the staggered case, we will also want to output cmax and cmin\n",
@@ -664,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
