--- a/in_progress/old/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/in_progress/old/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -573,8 +573,8 @@
    "outputs": [],
    "source": [
     "# Step 2.2: Derivatives of the electromagnetic stress-energy tensor\n",
-    "gammaUU = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaUU\",\"sym01\")\n",
-    "gammadet = gri.register_gridfunctions(\"AUX\",\"gammadet\")\n",
+    "ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaUU\",\"sym01\")\n",
+    "gri.register_gridfunctions(\"AUX\",\"gammadet\")\n",
     "gammaUU, gammadet = ixp.symm_matrix_inverter3x3(gammaDD)\n",
     "\n",
     "# We already have a handy function to define the Levi-Civita symbol in indexedexp.py\n",
