--- a/in_progress/Tutorial-GiRaFFEfood_NRPy.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy.ipynb
@@ -226,7 +226,7 @@
     "\n",
     "    B2 = sp.sympify(0)\n",
     "    # In flat spacetime, use the Minkowski metric; otherwise, use the input metric.\n",
-    "    if gammaDD==None:\n",
+    "    if gammaDD is None:\n",
     "        gammaDD = ixp.zerorank2()\n",
     "        for i in range(3):\n",
     "            gammaDD[i][i] = sp.sympify(1)\n",
@@ -298,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
