--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
@@ -134,7 +134,7 @@
     "Valenciav_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Valenciav_lU\",DIM=3)\n",
     "B_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_lU\",DIM=3)\n",
     "\n",
-    "Stilde_flux_HLLED = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Stilde_flux_HLLED\")\n",
+    "ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Stilde_flux_HLLED\")\n",
     "\n",
     "gri.register_gridfunctions(\"AUXEVOL\",\"cmax_x\")\n",
     "gri.register_gridfunctions(\"AUXEVOL\",\"cmin_x\")\n",
@@ -189,8 +189,7 @@
     "cmd.mkdir(os.path.join(out_dir,subdir))\n",
     "\n",
     "Sf.generate_C_code_for_Stilde_flux(os.path.join(out_dir,subdir),True, alpha_face, gamma_faceDD, beta_faceU,\n",
-    "                                   Valenciav_rU, B_rU, Valenciav_lU, B_lU,\n",
-    "                                   Stilde_flux_HLLED, sqrt4pi,\n",
+    "                                   Valenciav_rU, B_rU, Valenciav_lU, B_lU, sqrt4pi,\n",
     "                                   outCparams = \"outCverbose=False,CSE_sorting=none\",write_cmax_cmin=True)"
    ]
   },
@@ -675,11 +674,12 @@
      "output_type": "stream",
      "text": [
       "Compiling executable...\n",
-      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
-      "(BENCH): Finished executing in 1.0116524696350098 seconds.\n",
+      "(EXEC): Executing `gcc -std=gnu99 -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
+      "cc1plus: warning: command line option ‘-std=gnu99’ is valid for C/ObjC but not for C++\n",
+      "(BENCH): Finished executing in 1.0110466480255127 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_flux_unit_test `...\n",
-      "(BENCH): Finished executing in 0.2095193862915039 seconds.\n"
+      "(BENCH): Finished executing in 0.20968246459960938 seconds.\n"
      ]
     }
    ],
@@ -803,7 +803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
