--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
@@ -34,7 +34,7 @@
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_Metric_Face_Values.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_Metric_Face_Values.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb) Generates code to interpolate metric gridfunctions to cell faces.\n",
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_PPM.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_PPM.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-PPM.ipynb) Genearates code to reconstruct primitive variables on cell faces.\n",
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_Source_Terms.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_Source_Terms.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb) Genearates code to compute the $\\tilde{S}_i$ source term.\n",
-    "* [GiRaFFE_NRPy/Stilde_flux.py](../../edit/in_progress/GiRaFFE_NRPy/Stilde_flux.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Stilde_flux.ipynb) Generates the expressions to find the flux term of the Poynting flux evolution equation.\n",
+    "* [GiRaFFE_NRPy/Stilde_flux.py](../../edit/in_progress/GiRaFFE_NRPy/Stilde_flux.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb) Generates the expressions to find the flux term of the Poynting flux evolution equation.\n",
     "* [../GRFFE/equations.py](../../edit/GRFFE/equations.py) [\\[**tutorial**\\]](../Tutorial-GRFFE_Equations-Cartesian.ipynb) Generates code necessary to compute the source terms.\n",
     "* [../GRHD/equations.py](../../edit/GRHD/equations.py) [\\[**tutorial**\\]](../Tutorial-GRHD_Equations-Cartesian.ipynb) Generates code necessary to compute the source terms.\n",
     "\n",
@@ -111,7 +111,6 @@
     "\n",
     "thismodule = \"GiRaFFE_NRPy_Main_Driver\"\n",
     "\n",
-    "par.set_parval_from_str(\"grid::GridFuncMemAccess\",\"ETK\")\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\",2)\n",
     "\n",
     "out_dir = os.path.join(\"GiRaFFE_standalone_Ccodes\")\n",
@@ -157,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\n"
+      "Output C function calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs() to file GiRaFFE_standalone_Ccodes/RHSs/calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\n"
      ]
     }
    ],
@@ -276,9 +275,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_StildeD0_source_term() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_StildeD0_source_term.h\n",
-      "Output C function calculate_StildeD1_source_term() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_StildeD1_source_term.h\n",
-      "Output C function calculate_StildeD2_source_term() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_StildeD2_source_term.h\n"
+      "Output C function calculate_StildeD0_source_term() to file GiRaFFE_standalone_Ccodes/RHSs/calculate_StildeD0_source_term.h\n",
+      "Output C function calculate_StildeD1_source_term() to file GiRaFFE_standalone_Ccodes/RHSs/calculate_StildeD1_source_term.h\n",
+      "Output C function calculate_StildeD2_source_term() to file GiRaFFE_standalone_Ccodes/RHSs/calculate_StildeD2_source_term.h\n"
      ]
     }
    ],
@@ -370,10 +369,19 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output C function calculate_Stilde_rhsD() to file GiRaFFE_standalone_Ccodes/RHSs/calculate_Stilde_rhsD.h\n"
+     ]
+    }
+   ],
    "source": [
+    "ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"Stilde_flux_HLLED\")\n",
+    "\n",
     "import GiRaFFE_NRPy.Stilde_flux as Sf\n",
-    "subdir = \"RHSs\"\n",
     "Sf.generate_C_code_for_Stilde_flux(os.path.join(out_dir,subdir), True, alpha_face,gamma_faceDD,beta_faceU,\n",
     "                                   Valenciav_rU,B_rU,Valenciav_lU,B_lU,sqrt4pi)"
    ]
@@ -454,7 +462,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function GiRaFFE_NRPy_cons_to_prims() to file GiRaFFE_standalone_Ccodes\\C2P\\GiRaFFE_NRPy_cons_to_prims.h\n"
+      "Output C function GiRaFFE_NRPy_cons_to_prims() to file GiRaFFE_standalone_Ccodes/C2P/GiRaFFE_NRPy_cons_to_prims.h\n"
      ]
     }
    ],
@@ -492,7 +500,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function GiRaFFE_NRPy_prims_to_cons() to file GiRaFFE_standalone_Ccodes\\C2P\\GiRaFFE_NRPy_prims_to_cons.h\n"
+      "Output C function GiRaFFE_NRPy_prims_to_cons() to file GiRaFFE_standalone_Ccodes/C2P/GiRaFFE_NRPy_prims_to_cons.h\n"
      ]
     }
    ],
@@ -583,26 +591,6 @@
     "#include \"A2B/driver_AtoB.h\"\n",
     "#include \"C2P/GiRaFFE_NRPy_cons_to_prims.h\"\n",
     "#include \"C2P/GiRaFFE_NRPy_prims_to_cons.h\"\n",
-    "\n",
-    "void override_BU_with_old_GiRaFFE(const paramstruct *restrict params,REAL *restrict auxevol_gfs,const int n) {\n",
-    "#include \"set_Cparameters.h\"\n",
-    "    char filename[100];\n",
-    "    sprintf(filename,\"BU0_override-%08d.bin\",n);\n",
-    "    FILE *out2D = fopen(filename, \"rb\");\n",
-    "    fread(auxevol_gfs+BU0GF*Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2,\n",
-    "          sizeof(double),Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2,out2D);\n",
-    "    fclose(out2D);\n",
-    "    sprintf(filename,\"BU1_override-%08d.bin\",n);\n",
-    "    out2D = fopen(filename, \"rb\");\n",
-    "    fread(auxevol_gfs+BU1GF*Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2,\n",
-    "          sizeof(double),Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2,out2D);\n",
-    "    fclose(out2D);\n",
-    "    sprintf(filename,\"BU2_override-%08d.bin\",n);\n",
-    "    out2D = fopen(filename, \"rb\");\n",
-    "    fread(auxevol_gfs+BU2GF*Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2,\n",
-    "          sizeof(double),Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2,out2D);\n",
-    "    fclose(out2D);\n",
-    "}\n",
     "\n",
     "void GiRaFFE_NRPy_RHSs(const paramstruct *restrict params,REAL *restrict auxevol_gfs,const REAL *restrict in_gfs,REAL *restrict rhs_gfs) {\n",
     "#include \"set_Cparameters.h\"\n",
@@ -783,12 +771,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\n",
-      "Output C function calculate_StildeD0_source_term() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_StildeD0_source_term.h\n",
-      "Output C function calculate_StildeD1_source_term() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_StildeD1_source_term.h\n",
-      "Output C function calculate_StildeD2_source_term() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_StildeD2_source_term.h\n",
-      "Output C function GiRaFFE_NRPy_cons_to_prims() to file GiRaFFE_validation_Ccodes\\C2P\\GiRaFFE_NRPy_cons_to_prims.h\n",
-      "Output C function GiRaFFE_NRPy_prims_to_cons() to file GiRaFFE_validation_Ccodes\\C2P\\GiRaFFE_NRPy_prims_to_cons.h\n"
+      "Output C function calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs() to file GiRaFFE_validation_Ccodes/RHSs/calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\n",
+      "Output C function calculate_StildeD0_source_term() to file GiRaFFE_validation_Ccodes/RHSs/calculate_StildeD0_source_term.h\n",
+      "Output C function calculate_StildeD1_source_term() to file GiRaFFE_validation_Ccodes/RHSs/calculate_StildeD1_source_term.h\n",
+      "Output C function calculate_StildeD2_source_term() to file GiRaFFE_validation_Ccodes/RHSs/calculate_StildeD2_source_term.h\n",
+      "Output C function calculate_Stilde_rhsD() to file GiRaFFE_validation_Ccodes/RHSs/calculate_Stilde_rhsD.h\n",
+      "Output C function GiRaFFE_NRPy_cons_to_prims() to file GiRaFFE_validation_Ccodes/C2P/GiRaFFE_NRPy_cons_to_prims.h\n",
+      "Output C function GiRaFFE_NRPy_prims_to_cons() to file GiRaFFE_validation_Ccodes/C2P/GiRaFFE_NRPy_prims_to_cons.h\n"
      ]
     }
    ],
@@ -917,7 +906,16 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-GiRaFFE_NRPy_Main_Driver.tex, and compiled LaTeX file to\n",
+      "    PDF file Tutorial-GiRaFFE_NRPy_Main_Driver.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy_Main_Driver\",location_of_template_file=os.path.join(\"..\"))"
@@ -940,7 +938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
